Tue Mar  3 16:31:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): removes object files no longer used.

Tue Mar  3 16:25:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake), lib/mkmf.rb (create_makefile): $objs and
	  $srcs are always Array or nil now.

Sun Mar  1 19:41:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_dtoa): allocates one more byte to get rid of buffer
	  overrun.  a patch from Charlie Savage at [ruby-core:22604].

Sun Mar  1 17:27:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (gfDebug): uncommented out.
	  [ruby-core:22600]

Sun Mar  1 03:04:19 2009  Akinori MUSHA  <knu@iDaemons.org>

	* class.c (rb_singleton_class_clone): Qnil must be used for a null
	  class reference when we use NIL_P() to check class reference
	  validity.  The bug was exposed by the spec test of Sequel.

	* eval.c (ruby_init): Use NEW_CREF().

Sat Feb 28 18:05:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_eval): needs to guard intermediate string objects.
	  based on a patch from Brent Roman <brent AT mbari.org> a
	  [ruby-core:22584].

Fri Feb 27 17:45:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_load_ok): checks if regular file, except for the
	  platform disallows to open directories, e.g. dosish.
	  [ruby-dev:38097], [Bug #1221]

Thu Feb 26 14:31:27 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/openssl/ossl_ocsp.c (ossl_ocspbres_verify): OCSP_basic_verify
	  returns positive value on success, not non-zero.  [ruby-core:21762]
	  backported r22440 from trunk.

Thu Feb 26 12:36:36 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/generator.rb: Remove next() before overriding it to avoid a
	  awarning.

Wed Feb 25 23:37:56 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (unix_recv_io): prevent FD leak when 2 fd is
	  sent on LP64 platform.
	  (rsock_discard_cmsg_resource): new function.
