@@ -1,6 +1,7 @@
-Tue Mar  3 16:31:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Tue Mar  3 17:10:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
-	* ext/extmk.rb (extmake): removes object files no longer used.
+	* ext/extmk.rb (extmake): removes object files no longer used and
+	  files to be removed by old distclean.
 
 Tue Mar  3 16:25:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
